Add 2 recipes, and image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="poblanoPorkLoin.html">Poblano Pork Loin</a>
+        <img src="./img/ingredients.avif" alt="Ingredients Ready to Prepeare">
+        <br>
+        <ul>
+            <li><a href="poblanoPorkLoin.html">Poblano Pork Loin</a> </li>
+            <li><a href="hashbrown.html">Hash Brown</a> </li>
+            <li><a href="gtsteak.html">Grilled Tomahawk Steak</a> </li>
+        </ul>
+        
     </body>
 
 </html>
