--- a/poblanoPorkLoin.html
+++ b/poblanoPorkLoin.html
@@ -9,9 +9,7 @@
         <br>
         <h2>Description</h2>
         <p>
-            Pork Loin is lean and tender cut that features a juicy fat cap. Its large,wide and thick, its also generally boneless 
-            to make it easier to slice. The meat is light-colored with a pale pink or white color if cooked throught. The fat caps 
-            keeps the meat moist as it cooks, it also has mild flavor. Overall the the flavor of pork loin is juicy and tender.             
+            Indulge in a taste of slow-cooked perfection with our tantalizing Slow-Cooker Poblano Pork Loin. Succulent and tender, this dish is a celebration of rich flavors and melt-in-your-mouth goodness. We start with a premium pork loin, generously seasoned with a blend of aromatic spices and nestled in a bed of smoky, charred poblano peppers. As it simmers away in the slow-cooker, the pork becomes incredibly tender, absorbing the vibrant flavors of the peppers. The result is a dish that effortlessly combines savory and mildly spicy notes, creating a symphony of taste that will leave you craving every succulent bite. Elevate your dinner table with this culinary masterpiece and treat your taste buds to an unforgettable experience.             
         </p>
         <h2>Ingredients</h2>
         <ul>
@@ -48,5 +46,11 @@
                 rice and hot sauce.
             </li>
         </ol>
+        <br>
+        <h3>Credit</h2>
+            <a href="https://www.tasteofhome.com/recipes/slow-cooker-arizona-poblano-pork/">Home of Taste</a>
+        <br>
+        <br>
+        <a href="index.html">Return to Home</a>
     </body>
 </html>
