Addition of Class to html & css files

--- a/hashbrown.html
+++ b/hashbrown.html
@@ -2,29 +2,30 @@
 <html lan="en">
     <head charset="utf-8">
         <title>HashBrown</title>
+        <link rel="stylesheet" type="text/css" href="orders.css" />
     </head>
-    <body>
-        <h1>Hash Browns</h1>
+    <body class="container">
+        <h1 class="heading one">Hash Browns</h1>
         <br>
-        <img src="./img/image.webp" alt="Hash Browns ">
+        <img class="img" src="./img/image.webp" alt="Hash Browns ">
         <br>
-        <h2>Description</h2>
+        <h2 class="des">Description</h2>
         <p>
             Welcome to our delectable world of hashbrowns! Crispy on the outside, tender on the inside, our hashbrowns are a breakfast delight that will awaken your taste buds. Made from grated potatoes, expertly seasoned with a blend of spices, and cooked to golden perfection, each bite is a heavenly symphony of flavors and textures. Whether you prefer them as a hearty side dish or the star of your breakfast plate, our hashbrowns are guaranteed to satisfy your cravings. Pair them with a runny egg, crispy bacon, or a dollop of creamy sour cream for an unforgettable culinary experience. Prepare to savor the ultimate comfort food that will leave you craving more!
         </p>
         <br>
-        <h2>Ingredients</h2>
-        <ul>
-            <li>2 medium russet potatoes, shredded </li>
-            <li>½ medium onion, finely chopped </li>
-            <li>¼ cup all-purpose flour </li>
-            <li>1 egg </li>
-            <li>1 cup oil for frying, or as needed </li>
-            <li>salt and pepper to taste </li>
+        <h2 class="heading two">Ingredients</h2>
+        <ul class="list">
+            <li class="item">2 medium russet potatoes, shredded </li>
+            <li class="item">½ medium onion, finely chopped </li>
+            <li class="item">¼ cup all-purpose flour </li>
+            <li class="item">1 egg </li>
+            <li class="item">1 cup oil for frying, or as needed </li>
+            <li class="item">salt and pepper to taste </li>
         </ul>
         <br>
-        <h2>Steps</h2>
-        <ol>
+        <h2 class="heading three">Steps</h2>
+        <ol class="olist">
             <li>Gather all ingredients. </li>
             <li>Rinse shredded potatoes until water is clear, then drain and squeeze dry. </li>
             <li>Place shreds in a bowl and mix in the onion, flour, and egg until evenly distributed. </li>
@@ -33,11 +34,13 @@
             <li>Remove from pan, and drain on paper towels. Season with salt and pepper and serve immediately. </li>
         </ol>
         <br>
-        <h3>Credit</h3>
-        <a href="https://www.allrecipes.com/recipe/57783/emilys-famous-hash-browns/">Allrecipe</a>
-        <br>
-        <br>
-        <a href="index.html">Return to Home</a>
+        <div class="container two">
+            <h3 class="heading forth">Credit</h3>
+            <a id="reference" href="https://www.allrecipes.com/recipe/57783/emilys-famous-hash-browns/">Allrecipe</a>
+            <br>
+            <br>
+        </div>
+        <a class="return" href="index.html">Return to Home</a>
     </body>
 
 </html>
