--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-
+        <link rel="stylesheet" type="text/css" href="index.css">
     </head>
 
-    <body>
-        <h1>Odin Recipes</h1>
-        <img src="./img/ingredients.avif" alt="Ingredients Ready to Prepeare">
+    <body  class="container">
+        <h1 class="header">Odin Recipes</h1>
+        <img class="img" src="./img/ingredients.avif" alt="Ingredients Ready to Prepeare">
         <br>
-        <ul>
-            <li><a href="poblanoPorkLoin.html">Poblano Pork Loin</a> </li>
-            <li><a href="hashbrown.html">Hash Brown</a> </li>
-            <li><a href="gtsteak.html">Grilled Tomahawk Steak</a> </li>
+        <ul class="list">
+            <li class="link one"><a href="poblanoPorkLoin.html">Poblano Pork Loin</a> </li>
+            <li class="link two"><a href="hashbrown.html">Hash Brown</a> </li>
+            <li class="link three"><a href="gtsteak.html">Grilled Tomahawk Steak</a> </li>
         </ul>
         
     </body>
