Renovated index in html and css

--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
 
     <body  class="container">
         <h1 class="header">Odin Recipes</h1>
-        <img class="img" src="./img/ingredients.avif" alt="Ingredients Ready to Prepeare">
         <br>
-        <ul class="list">
-            <li class="link one"><a href="poblanoPorkLoin.html">Poblano Pork Loin</a> </li>
-            <li class="link two"><a href="hashbrown.html">Hash Brown</a> </li>
-            <li class="link three"><a href="gtsteak.html">Grilled Tomahawk Steak</a> </li>
-        </ul>
-        
+        <div class="item one">
+            <img class="img zero" src="./img/Slow-Cooker-Arizona-Poblano-Pork_EXPS_RC21_263547_B07_28_8b-26.jpg" alt="Poblano">
+            <a href="poblanoPorkLoin.html">Pork Loin</a>
+        </div>
+        <div class="item two">
+            <img class="img one" src="./img/image.webp" alt="Hash Brown"> 
+            <a href="hashbrown.html">Hash Brown</a> </li>
+        </div>
+        <div class="item three">
+            <img class="img two" src="./img/Grilled-Tomahawk-Steak.webp" alt="Grilled Tomahawk Steak">
+            <a href="gtsteak.html">Tomahawk Steak</a> </li>
+        </div>  
     </body>
 
 </html>
