Add class to Html and CSS mod

--- a/poblanoPorkLoin.html
+++ b/poblanoPorkLoin.html
@@ -6,47 +6,55 @@
     </head>
     <body class="container">
         <h1 class="heading one" >Slow-Cooker Poblano Pork Loin</h1>
-        <img class="img"src="./img/Slow-Cooker-Arizona-Poblano-Pork_EXPS_RC21_263547_B07_28_8b-26.jpg" alt="Poblano Pork Loin Finished">
-        <br>
-        <h2 class="des">Description</h2>
-        <p>
+        <div class="description">
+            <img class="img"src="./img/Slow-Cooker-Arizona-Poblano-Pork_EXPS_RC21_263547_B07_28_8b-26.jpg" alt="Poblano Pork Loin Finished">
+            <h2 class="des">Description</h2>
+            <p class="text">
             Indulge in a taste of slow-cooked perfection with our tantalizing Slow-Cooker Poblano Pork Loin. Succulent and tender, this dish is a celebration of rich flavors and melt-in-your-mouth goodness. We start with a premium pork loin, generously seasoned with a blend of aromatic spices and nestled in a bed of smoky, charred poblano peppers. As it simmers away in the slow-cooker, the pork becomes incredibly tender, absorbing the vibrant flavors of the peppers. The result is a dish that effortlessly combines savory and mildly spicy notes, creating a symphony of taste that will leave you craving every succulent bite. Elevate your dinner table with this culinary masterpiece and treat your taste buds to an unforgettable experience.             
-        </p>
-        <h2 class="heading two" >Ingredients</h2>
-        <ul class="list">
-            <li class="item">1 boneless pork loin roast (3 to 4 pounds) </li>
-            <li class="item">3 tablespoons fajita seasoning mix, divided </li>
-            <li class="item">1 tablespoon olive oil </li>
-            <li class="item">1 can (14-1/2 ounces) fire-roasted diced 
-                tomatoes, undrained </li>
-            <li class="item">1 large red onion, chopped </li>
-            <li class="item">1-1/2 cups chopped seeded fresh poblano 
-                peppers </li>
-            <li class="item">1/4 cup beef broth </li>
-            <li class="item">3/4 teaspoon ground cumin </li>
-            <li class="item">1/2 teaspoon garlic powder </li>
-            <li class="item">1/2 teaspoon cayenne pepper </li>
-            <li class="item">Optional: Hot cooked rice and a chipotle
-                 hot sauce, such as Cholula </li>
-        </ul>
-        <h2 class="heading three">Steps</h2>
-        <ol class="olist" >
-            <li>Sprinkle roast with 2 tablespoons fajita 
-                seasoning. In a large skillet, heat oil 
-                over medium heat; brown meat. Transfer 
-                meat to a 5- or 6-qt. slow cooker. In a 
-                large bowl, combine the next 8 ingredients
-                and remaining 1 tablespoon fajita seasoning; 
-                pour over meat. Cook, covered, on low until 
-                a thermometer inserted in pork reads at least 
-                145°, about 3 hours.</li>
-            <li>
-                Remove roast; cool slightly. Cut pork into 
-                bite-sized pieces; return to slow cooker.
-                Heat through. If desired, serve pork with 
-                rice and hot sauce.
-            </li>
-        </ol>
+            </p>
+        </div>
+        <br>
+        <div class="craft">
+            <div class="unorder">
+                <h2 class="heading two" >Ingredients</h2>
+                <ul class="list">
+                    <li class="item">1 boneless pork loin roast (3 to 4 pounds) </li>
+                    <li class="item">3 tablespoons fajita seasoning mix, divided </li>
+                    <li class="item">1 tablespoon olive oil </li>
+                    <li class="item">1 can (14-1/2 ounces) fire-roasted diced 
+                         tomatoes, undrained </li>
+                    <li class="item">1 large red onion, chopped </li>
+                    <li class="item">1-1/2 cups chopped seeded fresh poblano 
+                        peppers </li>
+                    <li class="item">1/4 cup beef broth </li>
+                    <li class="item">3/4 teaspoon ground cumin </li>
+                    <li class="item">1/2 teaspoon garlic powder </li>
+                    <li class="item">1/2 teaspoon cayenne pepper </li>
+                    <li class="item">Optional: Hot cooked rice and a chipotle
+                        hot sauce, such as Cholula </li>
+                </ul>
+            </div>
+            <div class="order">
+                <h2 class="heading three">Steps</h2>
+                <ol class="olist" >
+                    <li>Sprinkle roast with 2 tablespoons fajita 
+                    seasoning. In a large skillet, heat oil 
+                    over medium heat; brown meat. Transfer 
+                    meat to a 5- or 6-qt. slow cooker. In a 
+                    large bowl, combine the next 8 ingredients
+                    and remaining 1 tablespoon fajita seasoning; 
+                    pour over meat. Cook, covered, on low until 
+                    a thermometer inserted in pork reads at least 
+                    145°, about 3 hours.</li>
+                    <li>
+                    Remove roast; cool slightly. Cut pork into 
+                    bite-sized pieces; return to slow cooker.
+                    Heat through. If desired, serve pork with 
+                    rice and hot sauce.
+                    </li>
+                </ol>
+            </div>
+        </div>
         <br>
         <div class="container two">
             <h3 class="heading forth">Credit</h2>
@@ -54,6 +62,7 @@
             <br>
             <br>
         </div>
+        <br>
         <a class="return" href="index.html">Return to Home</a>
     </body>
 </html>
