class added to the two html and css was modified to style the html.

--- a/gtsteak.html
+++ b/gtsteak.html
@@ -3,56 +3,62 @@
     <head>
         <meta charset="utf-8">
         <title>Grilled T. Steak</title>
+        <link rel="stylesheet" type="text/css" href="orders.css" />
     </head>
-    <body>
-        <h1>Grilled Tomehawk Steak</h1>
-        <img src="./img/Grilled-Tomahawk-Steak.webp">
+    <body class="container">
+        <h1 class="heading one">Grilled Tomehawk Steak</h1>
+        <div class="description">
+            <img class="img" src="./img/Grilled-Tomahawk-Steak.webp">
+            <h2 class="des">Description</h2>
+            <p>
+                Get ready to ignite your taste buds with our show-stopping Grilled Tomahawk Steak. This epic cut of beef is a carnivore's dream, boasting incredible flavor and jaw-dropping presentation. Our top-quality Tomahawk steak is expertly seasoned with a blend of spices, allowing the natural flavors of the meat to shine. As it sizzles on the grill, the marbling renders to perfection, resulting in a juicy, tender steak with a mouthwatering crust. The Tomahawk's impressive bone-in presentation adds a touch of drama to your plate, making it a feast for the eyes as well. Sink your teeth into this succulent masterpiece and experience the true joy of a perfectly grilled steak. Prepare for a carnivorous delight that will have you coming back for more.
+            </p>
+        </div>
         <br>
-        <h2>Description</h2>
-        <p>
-            Get ready to ignite your taste buds with our show-stopping Grilled Tomahawk Steak. This epic cut of beef is a carnivore's dream, boasting incredible flavor and jaw-dropping presentation. Our top-quality Tomahawk steak is expertly seasoned with a blend of spices, allowing the natural flavors of the meat to shine. As it sizzles on the grill, the marbling renders to perfection, resulting in a juicy, tender steak with a mouthwatering crust. The Tomahawk's impressive bone-in presentation adds a touch of drama to your plate, making it a feast for the eyes as well. Sink your teeth into this succulent masterpiece and experience the true joy of a perfectly grilled steak. Prepare for a carnivorous delight that will have you coming back for more.
-        </p>
-        <br>
-        <h2>Ingredients<h2>
-        <h3>Steak Rub and Steak:</h3>
-        <ul>
-            <li>1 tablespoon brown sugar </li>
-            <li>2 teaspoons garlic powder </li>
-            <li>2 teaspoons onion powder </li>
-            <li>1 tablespoon Montreal steak seasoning</li>
-            <li>1 (2 3/4 pound) tomahawk steak (3-inch thick bone-in ribeye) </li>
-        </ul>
-        <h3>Compound Butter</h3>
-        <ul>
-            <li>1/4 cup salted butter, at room temperature </li>
-            <li>1 tablespoon minced shallot </li>
-            <li>1 clove garlic, minced </li>
-            <li>1 tablespoon chopped fresh chives </li>
-            <li>2 teaspoons reserved steak rub </li>
-        </ul>
-        <br>
-        <h2>Steps</h2>
-        <ol>
-            <li>To make steak rub, place brown sugar, Montreal steak seasoning, garlic powder, and onion powder in a small airtight container; shake or stir to combine. Set aside 2 teaspoons steak rub to use in compound butter. </li>
-            <li>Place steak on a half sheet pan, and rub steak on top, bottom, and sides with remaining steak rub until well coated. Place steak, uncovered, in the refrigerator to dry-brine overnight. </li>
-            <li>For compound butter, place butter, shallot, garlic, chives, and the reserved 2 teaspoons steak rub in a small bowl. Mash together with a fork until evenly combined. Spoon butter into a small airtight container, cover, and refrigerate until ready to use. </li>
-            <li>Remove steak from the refrigerator 1 hour before cooking to take the chill off. It will cook on the sheet pan that you used for dry-brining. </li>
-            <li>Preheat the oven to 300 degrees F (150 degrees C). The reverse sear method is used to cook this big steak, so you will need an instant-read thermometer. If you are using a digital meat thermometer, set the internal temperature to 110 degrees F (43 degrees C). </li>
-            <li>Bake steak on the sheet pan in the preheated oven until an instant-read thermometer inserted into the center reads 110 degrees F (43 degrees C), about 45 minutes. Begin checking the temperature at 30 minutes. </li>
-            <li>During the last 15 to 20 minutes of cooking time, preheat an outdoor grill for high heat and lightly oil the grate. </li>
-            <li>When steak reaches an internal temperature of  110 degrees F (43 degrees C) measured with an instant-read thermometer, remove it from the oven. </li>
-            <li>Grill steak directly on the grates of the preheated grill; sear on both sides, about 2 minutes per side. This is a fatty piece of meat, so be mindful of flame flare-ups. The internal temperature should now read 125 to 135 degrees F (51 to 57 degrees C) for medium rare. </li>
-            <li>Remove steak from the grill, and smear compound butter over top. Let butter melt into the steak, heating up the fresh garlic, shallots, and chives. Let steak rest for 10 minutes. </li>
-            <li>Slice steak and serve with accumulated juices and melted butter. Be sure to serve the bone–someone will want to gnaw on it! </li>
-        </ol>
-        <br>
-        <h3>Credit</h3>
-        <a href="https://www.allrecipes.com/grilled-tomahawk-steak-recipe-7508957">allrecipes</a>
-        <br>
-        <br>
-        <a href="index.html">Return to Home</a>
+        <div class="craft">
+            <div class="unorder">
+                <h2 class="heading two">Ingredients<h2>
+                <h3>Steak Rub and Steak:</h3>
+                <ul class="list">
+                    <li>1 tablespoon brown sugar </li>
+                    <li>2 teaspoons garlic powder </li>
+                    <li>2 teaspoons onion powder </li>
+                    <li>1 tablespoon Montreal steak seasoning</li>
+                    <li>1 (2 3/4 pound) tomahawk steak (3-inch thick bone-in ribeye) </li>
+                </ul>
+                <h3>Compound Butter</h3>
+                <ul class="list">
+                    <li>1/4 cup salted butter, at room temperature </li>
+                    <li>1 tablespoon minced shallot </li>
+                    <li>1 clove garlic, minced </li>
+                    <li>1 tablespoon chopped fresh chives </li>
+                    <li>2 teaspoons reserved steak rub </li>
+                </ul>
+            </div>  
+            <div class="order">
+                <br>
+                <h2 class="heading three">Steps</h2>
+                <ol class="olist three">
+                    <li>To make steak rub, place brown sugar, Montreal steak seasoning, garlic powder, and onion powder in a small airtight container; shake or stir to combine. Set aside 2 teaspoons steak rub to use in compound butter. </li>
+                    <li>Place steak on a half sheet pan, and rub steak on top, bottom, and sides with remaining steak rub until well coated. Place steak, uncovered, in the refrigerator to dry-brine overnight. </li>
+                    <li>For compound butter, place butter, shallot, garlic, chives, and the reserved 2 teaspoons steak rub in a small bowl. Mash together with a fork until evenly combined. Spoon butter into a small airtight container, cover, and refrigerate until ready to use. </li>
+                    <li>Remove steak from the refrigerator 1 hour before cooking to take the chill off. It will cook on the sheet pan that you used for dry-brining. </li>
+                    <li>Preheat the oven to 300 degrees F (150 degrees C). The reverse sear method is used to cook this big steak, so you will need an instant-read thermometer. If you are using a digital meat thermometer, set the internal temperature to 110 degrees F (43 degrees C). </li>
+                    <li>Bake steak on the sheet pan in the preheated oven until an instant-read thermometer inserted into the center reads 110 degrees F (43 degrees C), about 45 minutes. Begin checking the temperature at 30 minutes. </li>
+                    <li>During the last 15 to 20 minutes of cooking time, preheat an outdoor grill for high heat and lightly oil the grate. </li>
+                    <li>When steak reaches an internal temperature of  110 degrees F (43 degrees C) measured with an instant-read thermometer, remove it from the oven. </li>
+                    <li>Grill steak directly on the grates of the preheated grill; sear on both sides, about 2 minutes per side. This is a fatty piece of meat, so be mindful of flame flare-ups. The internal temperature should now read 125 to 135 degrees F (51 to 57 degrees C) for medium rare. </li>
+                    <li>Remove steak from the grill, and smear compound butter over top. Let butter melt into the steak, heating up the fresh garlic, shallots, and chives. Let steak rest for 10 minutes. </li>
+                    <li>Slice steak and serve with accumulated juices and melted butter. Be sure to serve the bone–someone will want to gnaw on it! </li>
+                </ol>
+            </div>         
+        </div>
+        <div cl="container brown">
+            <br>
+            <h3 class="heading five">Credit</h3>
+            <a id="reference" href="https://www.allrecipes.com/grilled-tomahawk-steak-recipe-7508957">allrecipes</a>
+        </div>
+        <br>   
+        <a class="return" href="index.html">Return to Home</a>
     </body>
-
-
-
 </html>
