--- a/hashbrown.html
+++ b/hashbrown.html
@@ -5,41 +5,47 @@
         <link rel="stylesheet" type="text/css" href="orders.css" />
     </head>
     <body class="container">
-        <h1 class="heading one">Hash Browns</h1>
+        <h1 class="heading brown">Hash Browns</h1>
+       <div class="description">
+            <img class="img" src="./img/image.webp" alt="Hash Browns ">
+            <h2 class="des">Description</h2>
+            <p>
+                Welcome to our delectable world of hashbrowns! Crispy on the outside, tender on the inside, our hashbrowns are a breakfast delight that will awaken your taste buds. Made from grated potatoes, expertly seasoned with a blend of spices, and cooked to golden perfection, each bite is a heavenly symphony of flavors and textures. Whether you prefer them as a hearty side dish or the star of your breakfast plate, our hashbrowns are guaranteed to satisfy your cravings. Pair them with a runny egg, crispy bacon, or a dollop of creamy sour cream for an unforgettable culinary experience. Prepare to savor the ultimate comfort food that will leave you craving more!
+            </p>
+       </div>
         <br>
-        <img class="img" src="./img/image.webp" alt="Hash Browns ">
+        <div class="craft">
+            <div class="unorder">
+                <h2 class="heading two">Ingredients</h2>
+                <ul class="list">
+                    <li class="item">2 medium russet potatoes, shredded </li>
+                    <li class="item">½ medium onion, finely chopped </li>
+                    <li class="item">¼ cup all-purpose flour </li>
+                    <li class="item">1 egg </li>
+                    <li class="item">1 cup oil for frying, or as needed </li>
+                    <li class="item">salt and pepper to taste </li>
+                </ul> 
+            </div>
+            <div class="order">
+                <h2 class="heading three">Steps</h2>
+                <ol class="olist">
+                    <li>Gather all ingredients. </li>
+                    <li>Rinse shredded potatoes until water is clear, then drain and squeeze dry. </li>
+                    <li>Place shreds in a bowl and mix in the onion, flour, and egg until evenly distributed. </li>
+                    <li>Heat about 1/4 inch of oil in a large heavy skillet over medium-high heat. When oil is sizzling hot, place potatoes into the pan in a 1/2 inch thick layer. Cover the whole bottom of the pan, or make separate piles like pancakes. </li>
+                    <li>Cook until nicely browned on the bottom, then flip over and brown on the other side. It should take at least 5 minutes per side. If you are cooking them in one big piece, it can be cut into quarters for easier flipping. </li>
+                    <li>Remove from pan, and drain on paper towels. Season with salt and pepper and serve immediately. </li>
+                </ol> 
+            </div> 
+        </div>
         <br>
-        <h2 class="des">Description</h2>
-        <p>
-            Welcome to our delectable world of hashbrowns! Crispy on the outside, tender on the inside, our hashbrowns are a breakfast delight that will awaken your taste buds. Made from grated potatoes, expertly seasoned with a blend of spices, and cooked to golden perfection, each bite is a heavenly symphony of flavors and textures. Whether you prefer them as a hearty side dish or the star of your breakfast plate, our hashbrowns are guaranteed to satisfy your cravings. Pair them with a runny egg, crispy bacon, or a dollop of creamy sour cream for an unforgettable culinary experience. Prepare to savor the ultimate comfort food that will leave you craving more!
-        </p>
-        <br>
-        <h2 class="heading two">Ingredients</h2>
-        <ul class="list">
-            <li class="item">2 medium russet potatoes, shredded </li>
-            <li class="item">½ medium onion, finely chopped </li>
-            <li class="item">¼ cup all-purpose flour </li>
-            <li class="item">1 egg </li>
-            <li class="item">1 cup oil for frying, or as needed </li>
-            <li class="item">salt and pepper to taste </li>
-        </ul>
-        <br>
-        <h2 class="heading three">Steps</h2>
-        <ol class="olist">
-            <li>Gather all ingredients. </li>
-            <li>Rinse shredded potatoes until water is clear, then drain and squeeze dry. </li>
-            <li>Place shreds in a bowl and mix in the onion, flour, and egg until evenly distributed. </li>
-            <li>Heat about 1/4 inch of oil in a large heavy skillet over medium-high heat. When oil is sizzling hot, place potatoes into the pan in a 1/2 inch thick layer. Cover the whole bottom of the pan, or make separate piles like pancakes. </li>
-            <li>Cook until nicely browned on the bottom, then flip over and brown on the other side. It should take at least 5 minutes per side. If you are cooking them in one big piece, it can be cut into quarters for easier flipping. </li>
-            <li>Remove from pan, and drain on paper towels. Season with salt and pepper and serve immediately. </li>
-        </ol>
-        <br>
-        <div class="container two">
-            <h3 class="heading forth">Credit</h3>
-            <a id="reference" href="https://www.allrecipes.com/recipe/57783/emilys-famous-hash-browns/">Allrecipe</a>
+        <div class="container brown">
+            <h3 class="heading five">Credit</h3>
+            <a id="referen" href="https://www.allrecipes.com/recipe/57783/emilys-famous-hash-browns/">Allrecipe</a>
             <br>
             <br>
         </div>
+        <br>
         <a class="return" href="index.html">Return to Home</a>
     </body>
 
